--- a/multiblend/multiblend/multiblend.vcxproj
+++ b/multiblend/multiblend/multiblend.vcxproj
@@ -128,14 +128,14 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <TargetExt>.lib</TargetExt>
-    <IncludePath>J:\sdk\opencv-2.4.11\build\include;J:\sdk\gnuwin64\include;$(IncludePath)</IncludePath>
+    <IncludePath>J:\sdk\opencv-3.0.0\build\include;J:\sdk\gnuwin64\include;$(IncludePath)</IncludePath>
     <TargetName>libmultiblend_x64</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseApp|x64'">
     <TargetExt>.exe</TargetExt>
-    <IncludePath>J:\sdk\opencv-2.4.11\build\include;J:\sdk\gnuwin64\include;$(IncludePath)</IncludePath>
+    <IncludePath>J:\sdk\opencv-3.0.0\build\include;J:\sdk\gnuwin64\include;$(IncludePath)</IncludePath>
     <TargetName>multiblend_x64</TargetName>
-    <LibraryPath>J:\sdk\gnuwin64\lib64;J:\sdk\opencv-2.4.11\build\x64\vc12\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>J:\sdk\gnuwin64\lib64;J:\sdk\opencv-3.0.0\build\x64\vc12\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -216,7 +216,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>libpng.lib;libtiff_i.lib;opencv_highgui2411.lib;opencv_imgproc2411.lib;opencv_core2411.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_core300.lib;opencv_imgproc300.lib;opencv_imgcodecs300.lib;libpng.lib;libtiff_i.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
